[package]
name = "signer-ffi"
version = "0.1.0"
authors = ["kayryu <lukayryu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "signer_ffi"
crate-type = ["staticlib", "cdylib"]

[dependencies]
signer = { path = "../signer" }

[build-dependencies]
cbindgen = "0.14.3"
dart-bindgen = "0.1.7"