[package]
name = "signer"
version = "0.1.0"
authors = ["kayryu <lukayryu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rsa = { version = "0.5.0", features = ["alloc"] }
rand = "0.8.4"
num-bigint-dig = { version = "0.7",  features = ["rand"] }
sha2 = "0.9.8"
num-traits = "0.2.14"
num-integer = "0.1.44"
